--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <!-- IE 호환-->
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=IntersectionObserver"></script>
+
     <meta
       name="description"
       content="Web site created using create-react-app"
