--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,7 @@
     <!-- IE 호환-->
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=IntersectionObserver"></script>
+    <script src="https://raw.githubusercontent.com/w3c/IntersectionObserver/master/polyfill/intersection-observer.js"></script>
 
     <meta
       name="description"
